build: Add Enable-Native-Access attribute to shadowJar manifest
Configure shadowJar manifest with Enable-Native-Access to prepare
for Java 25 native library restrictions, and add a terminal note in
the user guide on suppressing JavaFX native loader warnings.